--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "api-service": "nodemon index.js"
   },
-  "author": "aldiprasetya",
+  "author": "syaifulbahrisijabat",
   "license": "ISC",
   "dependencies": {
     "body-parse": "^0.1.0",
